<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="268dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/edit_text_one"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName2"
        android:layout_width="268dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edit_text_two"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="179dp"
        android:layout_height="79dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_prosseguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName2" />

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/message_one"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="243dp"
        android:layout_height="95dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:textColor="#E91E63"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOk" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOk" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="216dp"
        android:layout_height="92dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:textColor="#E91E63"
        android:textColorHighlight="#BF2D2D"
        android:textColorHint="#673AB7"
        android:textColorLink="#4E1C1C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:text="@string/stop_song"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="78dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/image_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/image_dois"
        android:rotationX="20"
        android:rotationY="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName2" />
</androidx.constraintlayout.widget.ConstraintLayout>